[package]
name = "select0r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
rust-crypto = "0.2.36"
text-colorizer = "1"
